# App_factory

./: .env.example  .gitignore  CLAUDE.md  README.md  TOOL_STACK.md  VALIDATION_CHECKLIST.md  WORKFLOWS.md  backup.txt  debug_eslint.mjs  eslint.config.mjs  implementation_plan.md.resolved  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.eslint.json  tsconfig.json  vite.config.ts
.agent/workflows/: architecture-visualization-standard.md  debugging-workflow.md  plugin-config-panel.md
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: agents_config.json  contract_prefixes.yaml  contracts_registry.yaml  design_tokens.css  environment_profile.yaml  error_codes.yaml  manifest_schema.json  mcp_config.json  test_fixtures.yaml  workflow_profiles.json
contracts/: __init__.py  base.py  llm_contract.py  stt_contract.py  tts_contract.py
docs/: ANALYSIS_ENFORCEMENT.md  API_REFERENCE.md  ARCHITECTURE.md  App_Factory_Traceability_Matrix_v5.0.md  CHANGELOG.md  DELIVERY_TRACKER.md  FE_AI_CANVAS_INTEGRATION.md  FE_AI_QUICK_START.md  ISSUES_LOG.md  ISSUES_LOG_PERSISTENCE.md  PLUGIN_DEVELOPMENT.md  TECHNICAL_REFERENCES.md  TROUBLESHOOTING.md  USER_GUIDE.md  architecture_blueprint.html  audit_eslint.json  audit_remediation.md  audit_ruff.json  baseline_build.txt  baseline_clippy.txt  baseline_eslint.txt  baseline_mypy.txt  baseline_ruff.txt  baseline_ts_types.txt  delivery_state.json  eslint_errors.txt  issues_log._2.md  mypy_errors.txt  strategic_analysis.md  ts_errors.txt
docs/App_factory_code_refs/: index.html
outputs/: AUDIT_REPORT.md  CONTINUATION_BRIEF.md  PHASE4_IMPLEMENTATION_PLAN.md  REMEDIATION_STRATEGY.md  audit_cargo_outdated.txt  audit_cargo_security.txt  audit_clippy.txt  audit_mypy.txt  audit_npm_outdated.json  audit_npm_security.json  audit_pip_outdated.json  audit_ruff.txt  audit_typescript.txt  audit_typescript_phase3.txt  batch1_validation.txt  batch2_validation.txt  current_errors.txt  current_mypy_errors.txt  phase3_progress.md  phase4_final_errors.txt  phase4_progress.txt  remaining_ts_errors.txt  remaining_ts_errors_2.txt  ts_errors_current.txt  ts_fix_progress.txt  typescript_error_analysis.txt  typescript_errors_detailed.txt
scripts/: capture_ui.js  generate_docs_images.js  tauri-predev.ps1  verify_agents.py
services/: __init__.py  llm.py  voice.py
src/: App.tsx  index.css  index.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: compiler.rs  mod.rs  secrets.rs
src-tauri/src/ipc/: health.rs  manager.rs  mod.rs  request.rs  response.rs  spawn.rs
src/hooks/: useIpc.ts  (+3 more)
templates/: .env.template  README.md.template  install_dependencies.bat.template  plugins.yaml.template  start.bat.template  tauri.conf.template.json
(+200 files in other folders)
