[project]
name = "app-factory"
version = "1.0.0"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["services", "plugins", "contracts", "skills"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-too-long (handled by line-length)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
files = ["services", "plugins", "contracts", "skills"]
exclude = ["__pycache__", "node_modules"]
